--- a/front_angular/package.json
+++ b/front_angular/package.json
@@ -29,6 +29,7 @@
     "@ionic/angular": "^8.0.0",
     "@swimlane/ngx-charts": "^20.5.0",
     "chart.js": "^4.4.3",
+    "echarts": "^5.5.1",
     "ionicons": "^7.0.0",
     "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
