--- a/front_angular/tsconfig.json
+++ b/front_angular/tsconfig.json
@@ -17,7 +17,9 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2022",
-    "module": "es2020",
+    "module": "commonjs",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "lib": [
       "es2018", 
       "dom"
