--- a/front_angular/package.json
+++ b/front_angular/package.json
@@ -33,6 +33,7 @@
     "echarts": "^5.5.1",
     "ionicons": "^7.0.0",
     "ng2-charts": "^6.0.1",
+    "ngx-echarts": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
